adicion de analisis de brand status y clima labora

--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -151,6 +151,8 @@
                                 <option value="user_personas">Modulo de User Personas</option>
                                 <option value="customer_experience">Modulo Customer Experience</option>
                                 <option value="customer_satisfaction">Modulo NPS y Satisfaccion</option>
+                                <option value="BrandStatus">Modulo Brand Status</option>
+                                <option value="ClimaLaboral">Modulo Clima Laboral</option>
                             </select>    
 
                             <ul class="list-group" id="ModulesLST" style="font-family: IBM Plex Sans;">
