marked en recoleecion de datos

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="assets/css/Hover.css">
     <link rel="stylesheet" href="assets/css/Responsiveness.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
+
     <style>
 
     </style>
