--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -22,7 +22,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
 
     <style>
-
+        .card-body {
+            word-wrap: break-word; /* Permite que el texto haga salto de línea */
+            word-break: break-word; /* O también puedes usar word-break: break-all; */
+        }
     </style>
 </head>
 
