--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="assets/css/Hover.css">
     <link rel="stylesheet" href="assets/css/Responsiveness.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
     <style>
         .card-body {
             word-wrap: break-word; /* Permite que el texto haga salto de línea */
