--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/Responsiveness.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
     <style>
         #overlay {
