texto de chatbot

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -27,6 +27,10 @@
             word-wrap: break-word; /* Permite que el texto haga salto de línea */
             word-break: break-word; /* O también puedes usar word-break: break-all; */
         }
+
+        .Message-Input {
+            color: #000000;
+        }
     </style>
 </head>
 
