T2C: CreacionDeEstudio | Placeholders implementados (data-i18n-placeholder=)

--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -63,7 +63,7 @@
                 type="text"
                 id="studySearchBar"
                 class="form-control border-start-0" 
-                placeholder="Buscar Estudio"
+                data-i18n-placeholder="PaginaPrincipal.searchBar"
                 >
             </div>
         </div>
