--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -92,6 +92,12 @@
                         <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 25%;margin-top: 10px;font-family: hedliner;">
                             <button class="btn btn-primary d-block w-100" id="DescargarLogOTPBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);">Descargar Log OTP</button>
                         </div>
+
+                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 25%;margin-top: 10px;font-family: hedliner;">
+                            <button class="btn btn-primary d-block w-100" id="BorrarBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);">Borrar Archivos</button>
+                        </div>
+
+
                     </div>
                     <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%; margin-top: 10px; margin-bottom: -5px;">
                         <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
