eliminar barra anaranjada en fe

--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -31,7 +31,7 @@
 
 <body id="page-top" style="overflow-y: hidden;" >
     <div id="wrapper">
-        <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-end sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;background: var(--bs-CR-orange-2);">
+        <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-end sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;background: #000000;">
            
             <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 0;border-bottom-right-radius: 0;background: #000000;">
                 <div class="container-fluid d-flex flex-column p-0">
