texto horrible en telefonos

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -31,6 +31,13 @@
         #Message-Input {
             color: #000000;
         }
+
+        /*Copyright-Legend que el elemento con ese id no se mire en telefonos*/
+        @media (max-width: 576px) {
+            #Copyright-Legend {
+                display: none;
+            }
+        }
     </style>
 </head>
 
