--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -23,6 +23,7 @@
             pointer-events: none;
             opacity: 0.6;
         }
+        
 
         #overlay {
             position: fixed; /* Posiciona el overlay de manera fija */
@@ -152,6 +153,17 @@
                 </div>
                 
                 <h2 style="color: var(--bs-emphasis-color);font-weight: bold;font-family: hedliner;" data-i18n="Encuesta.title">Crear Encuesta</h2>
+
+                <div id="defaultQuestionsSection" style="margin-bottom: 20px;">
+                    <h3 style="color: var(--bs-emphasis-color);font-weight: bold;font-family: hedliner;" data-i18n="Encuesta.hDefaultQuestions">Preguntas Sugeridas</h3>
+                    <div id="defaultQuestionsContainer" class="list-group" style="margin-top: 10px;font-family: hedliner;">
+                        <!-- Default questions will be loaded here by JavaScript -->
+                    </div>
+                    <div style="width: 250px;font-family: hedliner; margin-top:10px;">
+                        <button class="btn btn-primary d-block w-100" id="GuardarPreguntasSugeridasBtn" type="button" style="font-size: 20px;border-radius: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="Encuesta.btSaveDefaultQuestions">Guardar Preguntas Sugeridas</button>
+                    </div>
+                </div>
+
                 <form class="p-3 p-xl-4" method="post" style="font-family: hedliner;">
                     <div class="mb-3" style="font-family: hedliner;">
                         <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedliner;" data-i18n="Encuesta.hQuestion">Pregunta</p>
