--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/css/custom-styles.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
     <link rel="stylesheet" href="assets/css/Hover.css">
-    <script src="Funcionalidad/PaginaPrincipal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
 
@@ -34,7 +33,7 @@
 
 <body onload="initializePage()" id="page-top">
     <div id="wrapper">
-    <div id="overlay" style="display: flex;"></div>
+        <div id="overlay" style="display: flex;"></div>
 
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius:0px;border-bottom-right-radius: 0px;background: var(--bs-CR-black-dark);">
             <div class="container-fluid d-flex flex-column p-0">
@@ -47,13 +46,14 @@
                     <li class="nav-item" style="font-family: hedliner">
                         <a id="home-link2" class="nav-link" href="#">
                             <i class="fas fa-window-maximize" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
-                            <span style="font-family: hedliner;">PAGINA PRINCIPAL</span>
+                            <span style="font-family: hedliner;" data-i18n="AnalysisNavbar.mainPage">PAGINA PRINCIPAL</span>
                         </a>
                     </li>
                     
                     <li class="nav-item" style="font-family: hedliner">
                         <a id="analis-link" class="nav-link" href="#">
-                            <i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >ANALISIS DE DATOS</span>
+                            <i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
+                            <span style="font-family: hedliner;" data-i18n="AnalysisNavbar.dataAnalysis">ANALISIS DE DATOS</span>
                         </a>
                     </li>
                     <li class="nav-item" style="font-family: hedliner">
@@ -73,7 +73,10 @@
                 </div>
 
                 <div style="position: relative; bottom: 0; left: 0; text-align: center; width: 100%; margin-top: 10px; ">
-                    <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
+                    <strong data-i18n="brand"></strong>
+                    <span data-i18n="registered"></span>
+                    <strong data-i18n="company"></strong>.
+                    <span data-i18n="rights"></span>
                 </div>
             </div>
             
@@ -84,6 +87,8 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="Funcionalidad/PaginaPrincipal.js"></script>
+    <script src="Funcionalidad/i18n.js"></script>
     <script>
         function getParameterByName(name) {
             const urlParams = new URLSearchParams(window.location.search);
