--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -43,7 +43,7 @@
                 <div style="height: 30px;"></div>
                 
                 <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: hedliner;">
-                    <li class="nav-item" style="font-family: hedliner">
+                    <li class="nav-item active" style="font-family: hedliner">
                         <a id="home-link2" class="nav-link" href="#">
                             <i class="fas fa-window-maximize" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
                             <span style="font-family: hedliner;" data-i18n="AnalysisNavbar.mainPage">PAGINA PRINCIPAL</span>
