--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="assets/img/NegroLogo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Recolección de Datos</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
