--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -152,6 +152,7 @@
                                     <button class="btn btn-danger" id="botonEliminar" type="button" style="font-weight: bold;font-size: 20px;border-radius: 10px;font-family: hedliner;">
                                         <span data-i18n="InformacionDelEstudio.deleteButton">Eliminar</span>
                                     </button>
+                                    <label id="labelEntrevistaActual" style="margin-left: 15px; font-size: 18px; font-family: hedliner;"></label>
                                 </div>
                                 <div id="contenedorDeTexto" style="border: 1px solid #e3e6f0; border-radius: 10px; padding: 15px; min-height: 150px;">
                                     <!-- El texto de la encuesta se mostrará aquí -->
