visualizacion en tablas de encuestas

--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -142,20 +142,20 @@
 
                             
                             <div id="divEncuestas" style="flex: 2; padding-left: 15px;">
-                                <div class="d-flex align-items-center" style="margin-bottom: 10px;">
-                                    <button class="btn btn-primary" id="botonAnterior" type="button" style="font-weight: bold;font-size: 20px;border-radius: 10px;margin-right: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange); border-color: var(--bs-CR-orange);">
-                                        <i class="icon ion-arrow-left-c"></i>
-                                    </button>
-                                    <button class="btn btn-primary" id="botonSiguiente" type="button" style="font-weight: bold;font-size: 20px;border-radius: 10px;margin-right: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange); border-color: var(--bs-CR-orange);">
-                                        <i class="icon ion-arrow-right-c"></i>
-                                    </button>
-                                    <button class="btn btn-danger" id="botonEliminar" type="button" style="font-weight: bold;font-size: 20px;border-radius: 10px;font-family: hedliner;">
-                                        <span data-i18n="InformacionDelEstudio.deleteButton">Eliminar</span>
-                                    </button>
-                                    <label id="labelEntrevistaActual" style="margin-left: 15px; font-size: 18px; font-family: hedliner;"></label>
-                                </div>
-                                <div id="contenedorDeTexto" style="border: 1px solid #e3e6f0; border-radius: 10px; padding: 15px; min-height: 150px;">
-                                    <!-- El texto de la encuesta se mostrará aquí -->
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-hover" style="font-family: hedliner;">
+                                        <thead class="table-dark">
+                                            <tr>
+                                                <th scope="col" style="width: 15%;">Número de Encuesta</th>
+                                                <th scope="col" style="width: 20%;">ID</th>
+                                                <th scope="col" style="width: 55%;">Respuesta</th>
+                                                <th scope="col" style="width: 10%;">Acciones</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="tablaEncuestas">
+                                            <!-- Las filas de la tabla se generarán dinámicamente -->
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
 
