--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -188,8 +188,9 @@
 
 
                     <div class="mb-3" style="font-family: IBM Plex Sans;"></div>
-                    <div style="width: 250px;font-family: hedliner;">
+                    <div style="width: 250px;font-family: hedliner; display: flex; gap: 10px;">
                         <button class="btn btn-primary d-block w-100" id="GuardarEncuestaBtn" type="submit" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-top: 10px;font-family: hedliner; color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="Encuesta.btSaveSurvey">Guardar Encuesta</button>
+                        <button class="btn btn-secondary d-block w-100" id="ExportarEncuestaBtn" type="button" style="font-weight: bold;font-size: 20px;border-radius: 10px;margin-top: 10px;font-family: hedliner; color: var(--bs-CR-orange); background-color: var(--bs-CR-gray);" data-i18n="Encuesta.btExportSurvey">Exportar Encuesta</button>
                     </div>
                 </form>
             </div>
