--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -262,6 +262,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="js/studyIdManager.js"></script>
     <script src="js/script_LanzarEstudio.js"></script>
     <script src="js/Script_RecoleccionDeDatos.js"></script>
     <script src="js/Script_CheckSession.js"></script>
