--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -138,6 +138,9 @@
                                 <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 100%;margin-top: 10px;font-family: hedliner;">
                                     <button class="btn btn-primary d-block w-100" id="BorrarBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="InformacionDelEstudio.btDelFiles">Borrar Archivos</button>
                                 </div>
+                                <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 100%;margin-top: 10px;font-family: hedliner;">
+                                    <button class="btn btn-primary d-block w-100" id="DuplicarEstudioBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="InformacionDelEstudio.btDuplicateStudy">Duplicar Estudio</button>
+                                </div>
                             </div>
 
                             
@@ -174,6 +177,7 @@
     <script src="assets/js/theme.js"></script>
     <script src="js/Script_CheckSession.js"></script>
     <script src="js/script_InfoEstudio.js"></script>
+    <script src="js/script_DuplicarEstudio.js"></script>
     <script src="js/i18n.js"></script>
 </body>
 
