duplicacion de estudio phase 1

--- a/Modulo De config/CreacionDeEstudio.html
+++ b/Modulo De config/CreacionDeEstudio.html
@@ -134,6 +134,7 @@
     <script src="js/script_PPCrearEstudio.js"></script>
     <script src="js/Script_CheckSession.js"></script>
     <script src="js/i18n.js"></script>
+    <script src="js/script_DuplicarEstudio.js"></script>
 </body>
 
 </html>
