--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -138,6 +138,9 @@
                                 <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 100%;margin-top: 10px;font-family: hedliner;">
                                     <button class="btn btn-primary d-block w-100" id="BorrarBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="InformacionDelEstudio.btDelFiles">Borrar Archivos</button>
                                 </div>
+                                <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 100%;margin-top: 10px;font-family: hedliner;">
+                                    <button class="btn btn-warning d-block w-100" id="duplicateStudyBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;" data-i18n="InformacionDelEstudio.btDuplicate">🔄 Duplicar Estudio</button>
+                                </div>
                             </div>
 
                             
