importarResultados: "Importar datos",

--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -137,7 +137,7 @@
 
                             <div class="d-xxl-flex justify-content-xxl-start" style="background: var(--bs-body-bg);margin: 10px;border-radius : 13px;width: initial;padding: initial;">
                                 <button class="btn btn-primary" id="botonForzarA" type="button" style="margin: 10px;font-weight: bold;font-family: hedliner;width: 50%; border-radius : 13px;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="VisualizacionDeResultado.btForceAnalysis">Ejecutar Analisis</button>
-                                <button class="btn btn-primary" id="botonImportar" type="button" style="margin: 10px;font-weight: bold;font-family: hedliner;width: 50%; border-radius : 13px;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="VisualizacionDeResultado.btImport">Importar</button>
+                                <button class="btn btn-primary" id="botonImportar" type="button" style="margin: 10px;font-weight: bold;font-family: hedliner;width: 50%; border-radius : 13px;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);" data-i18n="VisualizacionDeResultado.btImport">Importar Datos</button>
                             </div>
                         </div>
                     </div>
