cambios de comparacion de filtro MAD

--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -207,6 +207,14 @@
                                                 <option value="percentage_nonCat" data-i18n="AnalisisDeDatos.optVisualText">Visualización textual</option>
                                             </select>
                                         </div>
+
+                                        <!-- Combobox para comparar con otro filtro -->
+                                        <div>
+                                            <label id="ComboBox_ResumenIndividualCompareLBL" for="ComboBox_ResumenIndividual_Compare" style="font-family: hedliner; display: none;">Comparar con:</label>
+                                            <select id="ComboBox_ResumenIndividual_Compare" style="font-family: hedliner; display: none;">
+                                                <!-- Opciones se agregarán dinámicamente aquí -->
+                                            </select>
+                                        </div>
                                     </div>
                                     
                                     
