Prueba con doughnut

--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -237,6 +237,15 @@
                                         </select>
                                     </div>
 
+                                    <!-- Combobox para seleccionar tipo de gráfico -->
+                                    <div>
+                                        <label id="ComboBox_ResumenIndividualChartTypeLBL" for="ComboBox_ResumenIndividualChartType" style="font-family: hedliner; display: none;">Tipo de gráfico:</label>
+                                        <select id="ComboBox_ResumenIndividualChartType" style="font-family: hedliner; display: none;">
+                                            <option value="bar">Gráfico de Barras</option>
+                                            <option value="doughnut">Gráfico de Dona</option>
+                                        </select>
+                                    </div>
+
                                     <!-- Combobox para comparar con otro filtro -->
                                     <div>
                                         <label id="ComboBox_ResumenIndividualCompareLBL" for="ComboBox_ResumenIndividual_Compare" style="font-family: hedliner; display: none;">Comparar con:</label>
