off white, border radius, padding en individual grafico

--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -267,7 +267,7 @@
                                     <div class="Content-Divs" id="ResumenIndividualContent" style="flex: 1;">
                                     </div>
 
-                                    <div id="charts-containerResumenIndividualContent" style="flex: 1;">
+                                    <div id="charts-containerResumenIndividualContent" style="flex: 1; background: white; border-radius: 13px; padding: 15px;">
                                     </div>
                                 </div>
                             </div>
