--- a/Modulo De config/SuperAdmin.html
+++ b/Modulo De config/SuperAdmin.html
@@ -155,12 +155,12 @@
                 </div>
 
 
-                <!-- Herramientas del Administrador (sin herramientas de estudios) -->
+                <!-- Herramientas (sin herramientas de estudios) -->
                 <div class="row">
                     <div class="col-12">
                         <div class="admin-card">
                             <div class="admin-header">
-                                <h3 style="font-family: hedliner; margin: 0;">🛠️ Herramientas del Administrador</h3>
+                                <h3 style="font-family: hedliner; margin: 0;">🛠️ Herramientas</h3>
                                 <p style="font-family: IBM Plex Sans; margin: 10px 0 0 0; opacity: 0.9;">Gestión de usuarios y estudios del sistema</p>
                             </div>
                             <div class="admin-content">
