Cambio de etiqueta de boton de login(admin tools)

--- a/Modulo De config/login.html
+++ b/Modulo De config/login.html
@@ -67,7 +67,7 @@
                                         </div>
                                         <hr style="font-family:hedliner;"><button class="btn btn-primary d-block btn-user w-100" id="IniciarSesionBTN" type="submit" style="font-family:hedliner; background-color: var(--bs-CR-orange);">Iniciar Sesión</button>
                                         <hr style="font-family:hedliner;">
-                                        <button class="btn btn-secondary d-block btn-user w-100" id="AdminToolsBTN" type="button" style="font-family:hedliner; background-color: var(--bs-CR-black-dark); display: none; margin-top: 10px; border: 2px solid var(--bs-CR-orange); color: white; transition: all 0.3s ease;">🛠️ Herramientas de Administración</button>
+                                        <button class="btn btn-secondary d-block btn-user w-100" id="AdminToolsBTN" type="button" style="font-family:hedliner; background-color: var(--bs-CR-black-dark); display: none; margin-top: 10px; border: 2px solid var(--bs-CR-orange); color: white; transition: all 0.3s ease;">Administración de la App</button>
                                     </form>
                                     <div class="text-center" style="font-family:hedliner;"><a class="small" href="https://www.cheetah-research.ai/reset_password/" style="font-family:hedliner;">¿Olvidaste tu contraseña?</a></div>
                                     <div class="text-center" style="font-family:hedliner;"><a class="small" href="https://www.cheetah-research.ai/signup/" style="font-family:hedliner;">Solicita Acceso</a></div>
