adicion de todo a el modulo de analisis de datos

--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/custom-styles.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
     <link rel="stylesheet" href="assets/css/Hover.css">
+    <link rel="stylesheet" href="Modulo Analisis De Datos/assets/css/subgraficos.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script type="module" src="Funcionalidad/AnalisisDeDatos.js" defer></script>
