--- a/Modulo De config/SuperAdmin.html
+++ b/Modulo De config/SuperAdmin.html
@@ -118,7 +118,7 @@
                             </a>
                         </li>
                         <li class="nav-item" style="font-family: hedliner;">
-                            <a class="nav-link" href="HerramientasDelAdministrador.html" style="font-family: hedliner;">
+                            <a class="nav-link" href="https://www.cheetah-research.ai/superadmin/ProductosTarifas/" style="font-family: hedliner;">
                                 <i class="fas fa-tools" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
                                 <span style="font-family: hedliner;">Productos y Tarifas</span>
                             </a>
