--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -149,9 +149,10 @@
                                     <table class="table table-striped table-hover" style="font-family: hedliner;">
                                         <thead class="table-dark">
                                             <tr>
-                                                <th scope="col" style="width: 15%;">Número de Encuesta</th>
-                                                <th scope="col" style="width: 20%;">ID</th>
-                                                <th scope="col" style="width: 55%;">Respuesta</th>
+                                                <th scope="col" style="width: 10%;">ID</th>
+                                                <th scope="col" style="width: 15%;">Rating</th>
+                                                <th scope="col" style="width: 40%;">Respuesta</th>
+                                                <th scope="col" style="width: 25%;">Comentarios</th>
                                                 <th scope="col" style="width: 10%;">Acciones</th>
                                             </tr>
                                         </thead>
