--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -145,7 +145,16 @@
 
                             
                             <div id="divEncuestas" style="flex: 2; padding-left: 15px;">
-                                <div class="table-responsive">
+                                <!-- Loading Spinner -->
+                                <div id="loadingSpinner" class="text-center" style="display: none; padding: 40px;">
+                                    <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
+                                        <span class="visually-hidden">Cargando...</span>
+                                    </div>
+                                    <p class="mt-3" style="font-family: hedliner; color: var(--bs-CR-orange);">Cargando encuestas...</p>
+                                </div>
+                                
+                                <!-- Tabla de encuestas -->
+                                <div id="tableContainer" class="table-responsive" style="display: none;">
                                     <table class="table table-striped table-hover" style="font-family: hedliner;">
                                         <thead class="table-dark">
                                             <tr>
