--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -50,12 +50,17 @@
 
     <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: 100vh;padding: 10px; border-radius : 13px; position: relative;">
         <!-- Top-left actions: Crear Estudio (+) and Cerrar Sesión -->
-        <div style="position: absolute; top: 12px; left: 12px; display: flex; gap: 8px; z-index: 10;">
-            <button class="btn btn-success d-flex align-items-center" type="button" style="font-weight: bold;font-family: hedliner;border-radius : 10px; padding: 6px 12px;" onclick="window.location.href='https://www.cheetah-research.ai/configuration/study/';" title="Crear Estudio" data-i18n="PaginaPrincipal.btCreate">
+        <div style="position: absolute; top: 12px; left: 12px; display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center; gap: 10px; z-index: 10; white-space: nowrap;">
+            <button type="button" class="d-flex align-items-center"
+                style="font-weight: bold;font-family: hedliner;border-radius : 10px; padding: 6px 12px; background-color: var(--bs-CR-orange); color: var(--bs-CR-gray); border: none;"
+                onclick="window.location.href='https://www.cheetah-research.ai/configuration/study/';"
+                title="Crear Estudio" data-i18n="PaginaPrincipal.btCreate">
                 <span style="font-size: 20px; line-height: 1; margin-right: 6px;">+</span>
                 <span>Crear Estudio</span>
             </button>
-            <button class="btn btn-outline-danger d-flex align-items-center" type="button" style="font-weight: bold;font-family: hedliner;border-radius : 10px; padding: 6px 12px;" onclick="logOut()" title="Cerrar Sesión" data-i18n="PaginaPrincipal.btLogOff">
+            <button type="button" class="d-flex align-items-center"
+                style="font-weight: bold;font-family: hedliner;border-radius : 10px; padding: 6px 12px; background: transparent; color: var(--bs-CR-orange); border: 2px solid var(--bs-CR-orange);"
+                onclick="logOut()" title="Cerrar Sesión" data-i18n="PaginaPrincipal.btLogOff">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right:6px;"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
                 <span>Cerrar Sesión</span>
             </button>
