fix en estilos de PP

--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -48,9 +48,9 @@
 
     
 
-    <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: 100vh;padding: 10px; border-radius : 13px; position: relative;">
+    <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: 100vh;padding: 10px;border-radius : 13px;position: relative;display: flex;flex-direction: column;">
         <!-- Top-left actions: Crear Estudio (+) and Cerrar Sesión -->
-        <div style="position: absolute; top: 12px; left: 12px; display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center; gap: 10px; z-index: 10; white-space: nowrap;">
+        <div style="/* position: absolute; */top: 12px;left: 12px;display: flex;flex-wrap: nowrap;gap: 10px;z-index: 10;white-space: nowrap;margin-left: auto;margin-right: 10px;">
             <button type="button" class="d-flex align-items-center"
                 style="font-weight: bold;font-family: hedliner;border-radius : 10px; padding: 6px 12px; background-color: var(--bs-CR-orange); color: var(--bs-CR-gray); border: none;"
                 onclick="window.location.href='https://www.cheetah-research.ai/configuration/study/';"
