--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -69,19 +69,14 @@
         <div class="my-3" style="max-width:100%; display: flex; flex-direction: row; margin: 10px;background: var(--bs-primary);border-radius : 13px;padding: 5px;font-family: hedliner;">
             <h1 style="margin:0; width:auto; color: var(--bs-body-bg);" data-i18n="PaginaPrincipal.title">SELECCIONAR ESTUDIO</h1>
 
-            <div class="input-group" style="margin-left:auto; width:50%; max-height: 100%;">
-                <span class="input-group-text bg-white border-end-0">
+            <div class="input-group" style="margin-left:auto;width:50%;max-height: 100%;border-radius: 20px;">
+                <span class="input-group-text bg-white border-end-0" style="border-top-left-radius: 15px; border-bottom-left-radius: 15px;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.442 1.398a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"/>
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.442 1.398a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"></path>
                     </svg>
                 </span>
                 
-                <input 
-                type="text"
-                id="studySearchBar"
-                class="form-control border-start-0" 
-                data-i18n-placeholder="PaginaPrincipal.searchBar"
-                >
+                <input type="text" id="studySearchBar" class="form-control border-start-0" data-i18n-placeholder="PaginaPrincipal.searchBar" placeholder="Buscar Estudio">
             </div>
         </div>
        
