--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -75,8 +75,8 @@
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.442 1.398a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"></path>
                     </svg>
                 </span>
-                
-                <input type="text" id="studySearchBar" class="form-control border-start-0" data-i18n-placeholder="PaginaPrincipal.searchBar" placeholder="Buscar Estudio">
+
+                <input type="text" id="studySearchBar" class="form-control border-start-0" style="border-top-right-radius: 15px; border-bottom-right-radius: 15px;" data-i18n-placeholder="PaginaPrincipal.searchBar" placeholder="Buscar Estudio">
             </div>
         </div>
        
