font en la tabla de encuestas

--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -168,7 +168,7 @@
                                                 <th scope="col" style="width: 10%;">Acciones</th>
                                             </tr>
                                         </thead>
-                                        <tbody id="tablaEncuestas">
+                                        <tbody id="tablaEncuestas" style="font-family: Nunito;">
                                             <!-- Las filas de la tabla se generarán dinámicamente -->
                                         </tbody>
                                     </table>
