--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -177,6 +177,7 @@
                                     <button id="save-textarea_ResumenGeneral" style="border-radius : 13px;" data-i18n="VisualizacionDeResultado.btSave">Guardar Cambios</button>
                                     <button id="export_ResumenGeneral" style="border-radius : 13px;" data-i18n="VisualizacionDeResultado.btExport">Exportar</button>
                                     <button id="download_markmap" style="display: none;">Descargar Mapa Mental</button>
+                                    <button id="download_sankey" style="display: none;">Descargar Diagrama Sankey</button>
 
 
                                 </div>
