nUEVOS MODULOS: - Customer Journey - Reputacion - Prueba de Producto

--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -187,6 +187,9 @@
                                 <option value="customer_satisfaction" data-i18n="LanzarEstudio.modCustomerSatisfaction">Modulo NPS y Satisfaccion</option>
                                 <option value="BrandStatus" data-i18n="LanzarEstudio.modBrandStatus">Modulo Brand Status</option>
                                 <option value="ClimaLaboral" data-i18n="LanzarEstudio.modClimaLaboral">Modulo Clima Laboral</option>
+                                <option value="CustomerJourney" data-i18n="LanzarEstudio.modCustomerJourney">Modulo Customer Journey</option>
+                                <option value="Reputacion" data-i18n="LanzarEstudio.modReputacion">Modulo Reputación</option>
+                                <option value="PruebaProducto" data-i18n="LanzarEstudio.modPruebaProducto">Modulo Prueba de Producto</option>
                             </select>    
 
                             <ul class="list-group" id="ModulesLST" style="font-family: IBM Plex Sans;">
