--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         #overlay {
             position: fixed; /* Posiciona el overlay de manera fija */
@@ -99,11 +100,17 @@
                 </div>
 
                 <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center" id="Header-BG" style="height: 8%;width: 100%;background: #0a0a0adc;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
-                    <div class="row d-flex flex-column justify-content-center align-content-center" style="height: 100%;">
+                    <div class="row d-flex flex-column justify-content-center align-content-center" style="height: 100%;flex: 1;">
                         <div class="col d-flex flex-column justify-content-center align-content-center" style="height: 100%;padding-right: 8px;padding-left: 8px;padding-top: 0px;margin-left: 15px;">
                             <h1 class="fw-semibold d-flex flex-row align-items-center order-1" id="Bot-Name" style="margin: 0px;font-family: hedliner;margin-top: 6px;color: #aaa7aa;">Socrates</h1>
                             <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;margin-top: -2px;color: var(--bs-CR-gray);">Desconectado</p>
                         </div>
+                    </div>
+                    <div class="d-flex align-items-center" style="margin-right: 20px;">
+                        <button id="exportChatBtn" class="btn btn-sm" style="background: var(--bs-CR-orange); color: white; border: none; border-radius: 8px; padding: 8px 15px; font-family: hedliner; display: none;" title="Exportar conversación a PDF">
+                            <i class="fas fa-download" style="margin-right: 5px;"></i>
+                            Exportar Chat
+                        </button>
                     </div>
                 </div>
                 <div class="container-fluid d-flex flex-column" id="Chat-BG" style="height: 92%;background: linear-gradient(#ffffff00 -20%, var(--bs-CR-gray-dark) 120%, var(--bs-CR-gray-dark) 97%), transparent;backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);-webkit-backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);">
