--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         #overlay {
             position: fixed; /* Posiciona el overlay de manera fija */
@@ -106,7 +107,7 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center" style="margin-right: 20px;">
-                        <button id="exportChatBtn" class="btn btn-sm" style="background: var(--bs-CR-orange); color: white; border: none; border-radius: 8px; padding: 8px 15px; font-family: hedliner; display: none;" title="Exportar conversación a Markdown">
+                        <button id="exportChatBtn" class="btn btn-sm" style="background: var(--bs-CR-orange); color: white; border: none; border-radius: 8px; padding: 8px 15px; font-family: hedliner; display: none;" title="Exportar conversación a PDF">
                             <i class="fas fa-download" style="margin-right: 5px;"></i>
                             Exportar Chat
                         </button>
